# coursemology-submission-uploader

./: LICENSE  README.md  pyproject.toml
coursemology_uploader/: cli.py  configs.py  core.py  coursemology_queries.py  csv_utils.py  downloader.py  extractor.py  file_mapping.py  reporting.py  scraper.py  submission_handler.py  types.py  workflow.py
examples/: config.yaml
